# mdlens-app

./: .gitignore  AGENTS.md  CLAUDE.md  LICENSE  MAINTAINING.md  README.md  mdlens.html  package-lock.json  package.json
.github/workflows/: build.yml
docs/: plan-v0.2.md
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
