[package]
name = "mdlens"
version = "0.2.0"
description = "MD Lens — lightweight local markdown/text viewer"
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
base64 = "0.22"
arboard = "3"
ureq = "2"
urlencoding = "2"

[profile.release]
opt-level = "s"
lto = true
strip = true
